# CloudEngineeringWorkflow

./: .gitignore  README.md
workflows/ticket_readiness/: README.md  code_review_r1.md  pyproject.toml
workflows/ticket_readiness/build-control/: BUILD_RUNBOOK.md  build-manifest.yaml
workflows/ticket_readiness/build-control/stories/: 001-project-scaffold.md  002-linear-read-adapter.md  003-artifact-store.md  004-deterministic-readiness-engine.md  005-llm-analysis-adapter.md  006-report-generator.md  007-draft-comment-generator.md  008-approval-workflow.md  009-linear-comment-write-back.md  010-run-summary.md  011-security-and-redaction.md  012-documentation-and-demo.md
workflows/ticket_readiness/config/: linear-sandbox.yaml  readiness-rubric.yaml
workflows/ticket_readiness/docs/: adr-001-http-client-and-sdk-usage.md  code_review_r2.md  cover-sheet.md  detailed-specification.md  known-risks.md  readiness-rubric.md  workflow-design.md
workflows/ticket_readiness/fixtures/: demo-issues.json
workflows/ticket_readiness/src/ticket_readiness/: __init__.py  __main__.py  approvals.py  artifacts.py  cli.py  config.py  drafts.py  errors.py  (+11 more)
workflows/ticket_readiness/templates/: linear-comment.md  readiness-report.md
workflows/ticket_readiness/tests/: test_approvals.py  test_artifact_store.py  test_cli.py  test_config.py  test_docstrings.py  test_drafts.py  test_errors.py  test_integration.py  test_linear_adapter.py  test_llm_analysis.py  test_readiness.py  test_reports.py  test_security.py  test_static_typing.py  test_summary.py  test_workflow_cli.py  test_writeback.py
(+2 files in other folders)
