[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-readiness-workflow"
version = "0.1.0"
description = "Python CLI workflow for evaluating Linear ticket readiness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.0,<10",
  "types-PyYAML>=6.0.12,<7",
]

[project.scripts]
ticket-readiness = "ticket_readiness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --capture=sys"

[tool.mypy]
python_version = "3.12"
files = ["src/ticket_readiness"]
strict = true
warn_unused_configs = true
